--- a/src/components/ControlPane/ControlPane.module.css
+++ b/src/components/ControlPane/ControlPane.module.css
@@ -12,8 +12,6 @@
   margin-bottom: 32px;
   max-width: 50%;
   min-width: 300px;
-  overflow: auto;
-  white-space: nowrap;
 }
 
 .title {
